--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -9,13 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
     steps:
     - name: Checkout of the repo
       uses: actions/checkout@v4
-    - name: Use Node.js 18
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 18.x
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies
       run: npm install
