--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -7,7 +7,25 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  npm_security_test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+    steps:
+    - name: Checkout of the repo
+      uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Run Secutiry Tests
+      run: npm run test-npm-security
+
+  integration_test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
