--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -7,7 +7,22 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  npm_secutiry_test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout of the repo
+      uses: actions/checkout@v4
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Run Security Tests
+      run: npm run test-npm-secutiry
+
+  integration_test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout of the repo
