--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -24,6 +24,7 @@ jobs:
 
   integration_test:
     runs-on: ubuntu-latest
+    needs: security_test
     steps:
     - name: Checkout of the repo
       uses: actions/checkout@v4
